apps/jellyseerr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: apps
spec:
  parentRefs:
    - name: home
      namespace: traefik
  hostnames:
    - jellyseerr.reza.network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-vpn-only
      backendRefs:
        - name: jellyseerr
          port: 5055
